Fixed Home Page header alignment

--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -37,6 +37,12 @@
   margin: 20px 0;
 }
 
+.hero-content .header{
+  text-align: left;
+}
+
+
+
 .info-card {
   background: var(--info-card-bg);
   z-index: 1;
